--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rust_mvc_template"
 version = "0.1.0"
 edition = "2021"
+description = "A simple MVC template for Rust using Axum, SeaORM, Tera, TailwindCSS & htmlx"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
