--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "prod": "export NODE_ENV=production && npx tailwindcss --minify -i resources/main.css -o public/ui.css"
   },
   "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.2"
   }
 }
